# 03_GameDuo_Backend

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
bossraid/: __init__.py  apps.py  models.py  serializers.py  urls.py  views.py
bossraid/utils/: utils.py
gameduo/: settings.py  urls.py
user/: admin.py  models.py  serializers.py  urls.py  views.py
user/utils/: utils.py
